<resources>
    <string name="app_name">storyApp</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile_Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="detail_image">Detail Image</string>
    <string name="errorMessage">Password harus 8 karakter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>